k8s-manifests/overlays/uat/superapp/client/notification/patch/uat-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: notification
        image: harbor.cbe.com.et/cbe-superapp/notification-uat:latest
        imagePullPolicy: Always
